Changed picture, fixed whitespace, bigger font

--- a/css/PersonalSite.css
+++ b/css/PersonalSite.css
@@ -1,8 +1,11 @@
+.navbar {
+	margin-bottom: 0;
+}
 
 .banner {
 	margin:0px;
-	background-image: url("../Images/cards.jpg");
-	height: 900px;
+	height:calc(100vh - 3rem);
+	background-image: url("../Images/stl.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	padding-right: 0;
@@ -13,12 +16,12 @@
 .banner .container {
   position: relative;
   top:100px;
-
+  
 }
 
 .banner h1 {
   color: #fff;
-  font-size: 60px;  
+  font-size: 8rem;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
   text-align: center;
